@@ -38,13 +38,9 @@
     <div id="cpg_header_block_outer">
 		<div class="cpg_header_block_inner" style="border-bottom:1px solid white">
 			<div id="main_menu">
-				<ul class="dropmenu">
 					{SYS_MENU}
 					{SUB_MENU}
-				</ul>
-				<ul class="dropmenu">
 					{ADMIN_MENU}
-				</ul>
 			</div>
 			<div class="clearer"></div>
 			{MESSAGE_BLOCK}
