@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2010-03-10 [B] Fixed validation issue with curve theme (thread ID 64041) {GauGau}
 2010-03-10 [D] Added GD logo {GauGau}
 2010-03-10 [B] Fixed error message for invalid meta albums entered in 'content of the main page' (thread ID 63977) {eenemeenemuu}
 2010-03-10 [D] Fixed broken images inside documentation that refered to rating {GauGau}
